--- a/react-d'lish/package.json
+++ b/react-d'lish/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "swiper": "^9.4.1",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
