--- a/react-d'lish/package.json
+++ b/react-d'lish/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "modal": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "swr": "^2.2.0",
+    "react-toastify": "^9.1.3",
     "swiper": "^9.4.1",
+    "swr": "^2.2.0",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
