--- a/react-d'lish/package.json
+++ b/react-d'lish/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.3",
+    "react-webcam": "^7.1.1",
     "swiper": "^9.4.1",
     "swr": "^2.2.0",
     "tailwindcss-animated": "^1.0.1"
