--- a/react-d'lish/package.json
+++ b/react-d'lish/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "modal": "^1.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
