--- a/react-d'lish/package.json
+++ b/react-d'lish/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.3",
     "react-webcam": "^7.1.1",
