Un platillo sencillo satisface a todos

--- a/react-d'lish/public/assets/products/mainDish/.gitignore
+++ b/react-d'lish/public/assets/products/mainDish/.gitignore
@@ -1,2 +1,11 @@
 *
 !.gitignore
+!chaow_mein.jpg
+!relleno_de_papa.jpg
+!filete_carne.jpg
+!pollo_plancha.jpg
+!burrito.jpg
+!lasagna.jpg
+!tacos.jpg
+!costilla_bbq.jpg
+!lonja.jpg
